switched to cover mode attached to top for page bg again to prevent bg behind header from being too dark

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,14 +25,8 @@ html {
     background-image: url(../images/ulimpik-naashinul-park-2560w.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    @media screen and (max-width: 700px) {
-        background-size: auto 100vh;
-        background-position: top;
-    }
-    @media screen and (min-width: 701px) {
-        background-size: cover;
-        background-position: bottom;    
-    }
+    background-size: cover;
+    background-position: top;
 }
 body{
     display: flex;
@@ -50,7 +44,7 @@ body{
     width: 100%;
     height: 100%;
     position: fixed;
-    @media screen and (min-width: 701px) {
+    @media screen and (min-width: 701px) { 
         left: 50%;
         margin-left: -350px;  
     }
